--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".screens.HomeActivity" />
-        <activity android:name=".screens.CreatePostsActivity"></activity>
+        <activity android:name=".screens.NewPostActivity"/>
     </application>
 
 </manifest>
